tests/base/parser/bad/type_t-map-cid-map-with.scilla
scilla_version 0

library TestLib

(* this value type has a broken key type *)

let f : Map Uint128 Map faulty
